add title class, fixed spacing

--- a/schedule/calendar/index.html
+++ b/schedule/calendar/index.html
@@ -83,8 +83,8 @@
     </nav>
     <section class = "intro">
        <div class = "container">
-          <div class = "d-flex justify-content-center">
-                  <h1>Calendar</h1>
+          <div class = "title">
+                  <h1>CALENDAR</h1>
           </div>
          <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=bmhsN2VpZmlrbXIydWg4NnE2b2ZrNWx2cmtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23E67C73&amp;showNav=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=WEEK&amp;showDate=0" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </div>
