update links + pages

--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
                         <a class="nav-link active" href="/index.html">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target = "_blank" href="https://docs.google.com/document/d/1sL6jBx4ISbhkX1KiTR9xX06R1DOlYD8TzUocQAqmf3g/edit?usp=sharing">RULES</a>
+                        <a class="nav-link" target = "_blank" href="https://tinyurl.com/ii2021rules">RULES</a>
                     </li>
                 <li class="nav-item dropdown">
                   <a class = "dropdown-toggle nav-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SCHEDULE</a>
                   <div class="dropdown-menu">
                       <a class="dropdown-item" target="_blank" href="https://docs.google.com/document/d/1VUN58kYoLrDmnYa7prwWKhadQl0yE4ntYwuJqlKMliQ/edit?usp=sharing">Events</a>
                       <a class="dropdown-item" href="/schedule/calendar/">Calendar</a>
-                      <a class="dropdown-item" target = "_blank" href="https://docs.google.com/document/d/1V-fG_H8cwa8z9QB5_XDC7bJHgj6D9Q_P9tR0mu9ItZE/edit?usp=sharing">Agenda</a>
+                      <a class="dropdown-item" target = "_blank" href="https://tinyurl.com/ii2021agenda">Agenda</a>
                   </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target = "_blank" href="https://docs.google.com/document/d/16RhdgwTEp2tTRs1xj7GDQOOMtor-JwjdGcVNz18qwnk/edit?usp=sharing">SPECIFICATIONS</a>
+                    <a class="nav-link" target = "_blank" href="https://tinyurl.com/ii2021specifications">SPECIFICATIONS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target = "_blank" href="https://docs.google.com/document/d/1NJRdne3Rayz2x2p684vj_55-bAQhQY4a8jp_xtHCCYQ/edit?usp=sharing">RESOURCES</a>
