--- a/schedule/calendar/index.html
+++ b/schedule/calendar/index.html
@@ -36,7 +36,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-172907340-3');
     </script>
-    
+
     <!-- Website CSS -->
     <link rel = "stylesheet" type = "text/css" href = "/styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -44,38 +44,38 @@
     <title>Impact Ideathon</title>
 </head>
 <body>
-    <nav class = "navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="#">🌎</a>
-        <button class = "navbar-toggler ml-auto custom-toggler" type = "button" data-toggle = "collapse" data-target = "#navbarNavAltMarkup">
-            <span class = "navbar-toggler-icon my-toggler"></span>
-        </button>
-        <div class = "collapse navbar-collapse mr-auto" id = "navbarNavAltMarkup">
-            <div class = "navbar-nav ml-auto">
-                <ul class = "navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/index.html">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" target = "_blank" href="https://docs.google.com/document/d/1sL6jBx4ISbhkX1KiTR9xX06R1DOlYD8TzUocQAqmf3g/edit?usp=sharing">RULES</a>
-                    </li>
-                    <li class="nav-item active dropdown">
-                      <a class = "dropdown-toggle nav-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SCHEDULE</a>
-                      <div class="dropdown-menu">
-                          <a class="dropdown-item" target="_blank" href="https://docs.google.com/document/d/1ATtuw5A3RvfuIMqUL4AFzsvqF7Mv3TefOEzqlG2qrhg/edit">Speakers + Presenters</a>
-                          <a class="dropdown-item" href="#">Add Calendar</a>
-                          <a class="dropdown-item" target = "_blank" href="https://docs.google.com/document/d/1Lms5HIyZujSVN-nzc910M4mDparJq097rOGhimA58cM/edit?usp=sharing">Agenda</a>
-                      </div>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" target = "_blank" href="https://docs.google.com/document/d/16RhdgwTEp2tTRs1xj7GDQOOMtor-JwjdGcVNz18qwnk/edit?usp=sharing">SPECIFICATIONS</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" target = "_blank" href="https://docs.google.com/document/d/1NJRdne3Rayz2x2p684vj_55-bAQhQY4a8jp_xtHCCYQ/edit?usp=sharing">RESOURCES</a>
-                    </li>
-              </ul>
-            </div>
-        </div>
-    </nav>
+  <nav class = "navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <a class="navbar-brand" href="#">🌎</a>
+      <button class = "navbar-toggler ml-auto custom-toggler" type = "button" data-toggle = "collapse" data-target = "#navbarNavAltMarkup">
+          <span class = "navbar-toggler-icon my-toggler"></span>
+      </button>
+      <div class = "collapse navbar-collapse mr-auto" id = "navbarNavAltMarkup">
+          <div class = "navbar-nav ml-auto">
+              <ul class = "navbar-nav ml-auto">
+                  <li class="nav-item">
+                      <a class="nav-link" href="/index.html">HOME</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" target = "_blank" href="https://tinyurl.com/ii2021rules">RULES</a>
+                  </li>
+              <li class="nav-item dropdown">
+                <a class = "dropdown-toggle nav-link active" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SCHEDULE</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" target="_blank" href="https://docs.google.com/document/d/1VUN58kYoLrDmnYa7prwWKhadQl0yE4ntYwuJqlKMliQ/edit?usp=sharing">Events</a>
+                    <a class="dropdown-item" href="/schedule/calendar/">Calendar</a>
+                    <a class="dropdown-item" target = "_blank" href="https://tinyurl.com/ii2021agenda">Agenda</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" target = "_blank" href="https://tinyurl.com/ii2021specifications">SPECIFICATIONS</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" target = "_blank" href="https://docs.google.com/document/d/1NJRdne3Rayz2x2p684vj_55-bAQhQY4a8jp_xtHCCYQ/edit?usp=sharing">RESOURCES</a>
+              </li>
+            </ul>
+          </div>
+      </div>
+  </nav>
     <section class = "intro">
        <div class = "container">
           <div class = "title">
