add donate page

--- a/donate/index.html
+++ b/donate/index.html
@@ -59,7 +59,7 @@
                       <a class="nav-link" target = "_blank" href="https://tinyurl.com/ii2021rules">RULES</a>
                   </li>
               <li class="nav-item dropdown">
-                <a class = "dropdown-toggle nav-link active" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SCHEDULE</a>
+                <a class = "dropdown-toggle nav-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SCHEDULE</a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" target="_blank" href="https://docs.google.com/document/d/1VUN58kYoLrDmnYa7prwWKhadQl0yE4ntYwuJqlKMliQ/edit?usp=sharing">Events</a>
                     <a class="dropdown-item" href="/schedule/calendar/">Calendar</a>
@@ -73,7 +73,7 @@
                   <a class="nav-link" target = "_blank" href="https://docs.google.com/document/d/1NJRdne3Rayz2x2p684vj_55-bAQhQY4a8jp_xtHCCYQ/edit?usp=sharing">RESOURCES</a>
               </li>
               <li class="nav-item">
-                  <a class="active action" href="/donate">Donate</a>
+                  <a class="action" href="/donate">Donate</a>
               </li>
             </ul>
           </div>
@@ -82,10 +82,46 @@
     <section class = "intro">
        <div class = "container">
           <div class = "title">
-                  <h1>CALENDAR</h1>
+                  <h1>SUPPORT US</h1>
           </div>
-         <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=bmhsN2VpZmlrbXIydWg4NnE2b2ZrNWx2cmtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23E67C73&amp;showNav=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=WEEK&amp;showDate=0" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+       </div>
+    </section>
+    <section class = "main">
+        <div class = "container">
+            <div class = "row flex-column-reverse flex-md-row">
+                <div class = "col-lg-1">
+                </div>
+                <div class = "col-lg-10">
+                    <p class = "main-txt">Our Impact Ideathons are held over three days and task participants with identifying a global issue and as a team formulating an idea that could be the solution. We challenge our students to collaborate to identify the world's greatest sustainable development challenges and propose solutions that will shape our future. Through this challenge, students will gain critical skills in teamwork, design thinking, and presentation as well as opportunities to network with leaders in the social impact space as they relate to the STEM fields.
+                    </p>
+                    <h2 class = "subheading">How your donation will help US:</h2>
+                    <p class = "main-txt">We will solely use all of your donations to fund Ideathon costs!
+                      That is gift cards, workshop speakers, keynote speakers, educational toys, and Ideathon merch!
+                    </p>
+                    <ul>
+                      <li>
+                        <h6>Gift cards:</h6> We’re prizing the winners of Ideathon with gift cards. Gift cards allow participants to fund their STEM ideas in their creative ways.
+                      </li>
+                      <li>
+                        <h6>Keynote & workshop speakers:</h6> Your donations allow us to find impactful, professional, and engaging speakers that can make a big impact on students' lives.
+                      </li>
+                      <li>
+                        <h6>Tech gadgets:</h6> We hope to provide many students with educational gadgets to further their interest and knowledge for STEM!
+                      </li>
+                      <li>
+                        <h6>Ideathon merch:</h6> We want to provide our participants with exciting stickers and hats!
+                      </li>
+                    </ul>
+                </div>
+                <div class = "col-lg-1">
+                </div>
+            </div>
         </div>
+    </section>
+    <section class="donate">
+      <div class="container">
+        <iframe src="https://bank.hackclub.com/donations/start/stemchats" class="responsive-iframe" style="border:none;" name="donateFrame" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" height="650px" width="512px" allowfullscreen></iframe>
+      </div>
     </section>
     <section class = "footer">
       <div class = "container">
