--- a/index.html
+++ b/index.html
@@ -78,8 +78,11 @@
                     <a class="nav-link" target = "_blank" href="https://docs.google.com/document/d/1NJRdne3Rayz2x2p684vj_55-bAQhQY4a8jp_xtHCCYQ/edit?usp=sharing">RESOURCES</a>
                 </li>
                 <li class="nav-item">
-                    <button class="action" onclick="window.open('https://bank.hackclub.com/donations/start/stemchats','_blank');">Donate</button>
+                    <a class="active action" href="/donate">Donate</a>
                 </li>
+                <!-- <li class="nav-item">
+                    <button class="action" onclick="window.open('https://bank.hackclub.com/donations/start/stemchats','_blank');">Donate</button>
+                </li> -->
               </ul>
             </div>
         </div>
