--- a/schedule/calendar/index.html
+++ b/schedule/calendar/index.html
@@ -90,7 +90,8 @@
     <section class = "footer">
       <div class = "container">
           <div id="CR" class="col">
-              <p>&copy; 2020 STEMchats Inc. Nonprofit Organization.</p>
+            <p>&copy; 2021 STEMchats Inc.</p>
+            <p>STEMchats is fiscally sponsored by Hack Club Bank, a project by The Hack Foundation (d.b.a Hack Club), a 501(c)(3) nonprofit (EIN: 81-2908499)</p>
           </div>
       </div>
    </section>
